syntax = "proto3";

package de.dpunkt.myaktion;

message Donation {
    double amount = 1;
    string donorName = 2;
}

service MyaktionMonitorService {
    rpc SendDonation(DonationRequest) returns (DonationResponse) {}
}

message DonationRequest {
    int64 campaignId = 1;
    Donation donation = 2;
}

message DonationResponse {
    string message = 1;
}
